Accessibility improvements; smoother demo redirect

--- a/Energy.App.Standalone/Features/Setup/Household/Household.razor
+++ b/Energy.App.Standalone/Features/Setup/Household/Household.razor
@@ -20,16 +20,17 @@
                                    Disabled="@AppConfig.IsDemoMode"
                                    OpenTo="OpenTo.Year"
                                    Clearable="true"
+                                   
                                    DateFormat="MMMM yyyy"
                                    MaxDate="DateTime.Today"></MudDatePicker>
 
-                    <InfoTooltip>Your move in date ensures only energy data relevant to you is processed</InfoTooltip>
+                    <InfoTooltip IconTitle="Tooltip for Move-in DatePicker">Your move in date ensures only energy data relevant to you is processed</InfoTooltip>
                 </div>
 
                 <div class="my-3 d-flex align-baseline">
                     <MudTextField For="@(() => _householdDetails.IhdMacId)" @bind-Value="@_householdDetails.IhdMacId" Required Disabled="@AppConfig.IsDemoMode"
                                   Placeholder="IHD MAC ID"></MudTextField>
-                    <InfoTooltip>
+                    <InfoTooltip IconTitle="Tooltip for IHD MAC ID">
                         This is a 16 character code that uniquely identifies your Smart Meter. <br />
                         It is sometimes called a GUID or EUI. It can usually be found on the back of the physical Smart Meter or within the batter case. <br />
                         In some models it can be found by accessing the settings in the Smart Meter user interface
@@ -40,19 +41,19 @@
                                      For="@(() => _householdDetails.OutCode)"
                                      T="OutCode" CoerceText="true"
                                      Clearable="true"
-                                              Required
+                                     Required
                                       Disabled="@AppConfig.IsDemoMode"
                                      ShowProgressIndicator="true" ToStringFunc="@(outCode => outCode.OutCodeCharacters)"
                                      MinCharacters="2"
                                      OnClearButtonClick="ClearPostalArea"
                                      SearchFuncWithCancel="SearchOutCodes"></MudAutocomplete>
-                    <InfoTooltip>
+                    <InfoTooltip IconTitle="Tooltip for Postal Area">
                         Your Postal Area is the first 4 characters of your postcode (or sometimes 3 in London). <br /> It's needed to retrieve weather data for your location, so we can forecast your energy usage with weather changes
                     </InfoTooltip>
                 </div>
                 <div class="d-flex align-baseline">
                     <MudText>What is your home's primary heating source?</MudText>
-                    <InfoTooltip>
+                    <InfoTooltip IconTitle="Tooltip for selecting your home's primary heating source">
                         What do you use to heat your home? <br />
                         In the UK, 80% of people use some form of Gas central heating
                     </InfoTooltip>
