--- a/Energy.App.Standalone/Pages/SetupWizard/Steps/ElectricityAuthorizationStep.razor
+++ b/Energy.App.Standalone/Pages/SetupWizard/Steps/ElectricityAuthorizationStep.razor
@@ -10,27 +10,23 @@
             <div class="mx-auto">
                 <MudButton Size="Size.Medium"
                            Variant="Variant.Outlined"
-                           StartIcon="fa-solid fa-arrow-left"
                            Color="Color.Default"
                            OnClick="GoBackCallback">
-                    Back
+                    <span><i class="fa-solid fa-arrow-left" aria-hidden="true"></i> Back</span>
                 </MudButton>
                 <MudButton Size="Size.Medium"
                            Variant="Variant.Outlined"
-                           EndIcon="fa-solid fa-arrow-right"
                            Color="Color.Default"
                            Class="@(CanMoveNext ? "d-none" : "")"
                            OnClick="SkipToDone">
-                    Skip
+                    <span>Skip <i class="fa-solid fa-arrow-right" aria-hidden="true"></i></span>
                 </MudButton>
-
                 <MudButton Size="Size.Medium"
                            Variant="Variant.Outlined"
-                           EndIcon="fa-solid fa-arrow-right"
                            Disabled="@(!CanMoveNext)"
                            Color="Color.Success"
                            OnClick="GoToNextStageCallback">
-                    Next
+                    <span>Next <i class="fa-solid fa-arrow-right" aria-hidden="true"></i></span>
                 </MudButton>
             </div>
             <MudButton Class="me-0" Color="Color.Default" OnClick="CloseWizardCallback">Exit</MudButton>
