--- a/Energy.App.Standalone/Pages/SetupWizard/Steps/GasMeterStep.razor
+++ b/Energy.App.Standalone/Pages/SetupWizard/Steps/GasMeterStep.razor
@@ -1,50 +1,43 @@
 @inherits FluxorComponent
 <StepTemplate CloseWizardCallback="CloseWizardCallback" BreadcrumbItems="BreadcrumbItems">
     <SetupStepPage>
-        <AddGasMeterFormComponent  />
+        <AddGasMeterFormComponent />
     </SetupStepPage>
     <ActionButtons>
         <div class="d-flex justify-end px-4">
 
             <div class="mx-auto">
-                <MudButton
-                    Size="Size.Medium"
-                    Variant="Variant.Outlined"
-                    StartIcon="fa-solid fa-arrow-left"
-                    Color="Color.Default"
-                    OnClick="GoBackCallback">
-                    Back
+                <MudButton Size="Size.Medium"
+                           Variant="Variant.Outlined"
+                           Color="Color.Default"
+                           OnClick="GoBackCallback">
+                    <span><i class="fa-solid fa-arrow-left" aria-hidden="true"></i> Back</span>
                 </MudButton>
-                <MudButton
-                    Size="Size.Medium"
-                    Variant="Variant.Outlined"
-                    EndIcon="fa-solid fa-arrow-right"
-                    Color="Color.Default"
-                    Class="@(CanMoveNext ? "d-none" : "")"
-                    OnClick="SkipToElectricity">
-                    Skip to Electricity
+                <MudButton Size="Size.Medium"
+                           Variant="Variant.Outlined"
+                           Color="Color.Default"
+                           Class="@(CanMoveNext ? "d-none" : "")"
+                           OnClick="SkipToElectricity">
+                    <span>Skip to Electricity <i class="fa-solid fa-arrow-right" aria-hidden="true"></i></span>
                 </MudButton>
-
-                <MudButton
-                    Size="Size.Medium"
-                    Variant="Variant.Outlined"
-                    EndIcon="fa-solid fa-arrow-right"
-                    Disabled="@(!CanMoveNext)"
-                    Color="Color.Success"
-                    OnClick="GoToNextStageCallback">
-                    Authorize
+                <MudButton Size="Size.Medium"
+                           Variant="Variant.Outlined"
+                           Disabled="@(!CanMoveNext)"
+                           Color="Color.Success"
+                           OnClick="GoToNextStageCallback">
+                    <span>Authorization <i class="fa-solid fa-arrow-right" aria-hidden="true"></i></span>
                 </MudButton>
             </div>
             <MudButton Class="me-0" Color="Color.Default" OnClick="CloseWizardCallback">Exit</MudButton>
         </div>
-            
+
 
 
     </ActionButtons>
 </StepTemplate>
 
 @code {
-    
+
     [Inject] IState<MeterSetupState> MeterSetupState { get; set; }
 
     bool CanMoveNext => MeterSetupState.Value[MeterType.Gas].InitialSetupValid;
