--- a/Energy.App.Standalone/Features/Setup/Meter/Pages/AddGasMeterPage.razor
+++ b/Energy.App.Standalone/Features/Setup/Meter/Pages/AddGasMeterPage.razor
@@ -6,16 +6,17 @@
 <MudGrid Justify="Justify.Center">
     <MudItem xs="12">
         <MudPaper Elevation="2" Class="p-2 mt-2">
-            <MudTooltip ShowOnHover="true" Text="Return to Setup">
+            <MudTooltip ShowOnHover="true" Text="Return to Setup" >
                 <MudLink Underline="Underline.None"
                          Href="@($"/Setup")">
                     <MudButton Class="ma-1" Color="Color.Primary"
                                ButtonType="ButtonType.Button"
                                Variant="Variant.Filled"
-                               Size="Size.Small"
-                               StartIcon="@Icons.Material.Filled.ArrowBack">Back to Setup</MudButton>
+                               Size="Size.Small">
+                        <span><i class="fa-solid fa-arrow-left" aria-hidden="true"></i> Back to Setup</span>
+                    </MudButton>
                 </MudLink>
-            </MudTooltip>
+                </MudTooltip>
             <AddGasMeterFormComponent OnSuccessfulCallback="OnSuccessfulSave" />
         </MudPaper>
     </MudItem>
