--- a/Energy.App.Standalone/PageComponents/CopyToClipboardTextField.razor
+++ b/Energy.App.Standalone/PageComponents/CopyToClipboardTextField.razor
@@ -14,6 +14,7 @@
         </TooltipContent>
         <ChildContent>
             <MudIconButton
+                Title="Copy to Clipboard?"
                 Icon="@copyToClipboardIcon"
                 Size="Size.Small"
                 OnClick="CopyToClipboardClick"
