--- a/Energy.App.Standalone/Shared/NavMenu.razor
+++ b/Energy.App.Standalone/Shared/NavMenu.razor
@@ -1,7 +1,7 @@
 ﻿@inherits FluxorComponent
 
-<MudPaper Class="py-0" Elevation="0">
-    <MudNavMenu Color="Color.Info" Bordered="true" Class="d-flex flex-column">
+<MudPaper Class="py-0" Elevation="0" UserAttributes="@(new() { {"id","main-nav"}, {"role", "navigation" }, {"aria-label", "Main Site Links"}})">
+    <MudNavMenu  Color="Color.Info" Bordered="true" Class="d-flex flex-column">
 
         <MudTooltip Text="@(!HouseholdSetupValid ? "Setup required" : "")" Placement="Placement.Right" RootClass="w-Inherit">
 
@@ -20,14 +20,14 @@
         </MudTooltip>
         <MudDivider></MudDivider>
 
-        <MudTooltip Text="@ElectricityTooltipText()" Placement="Placement.Right" RootClass="w-Inherit">
-            <MudNavLink Disabled="ElectricityDisabled"  Class="navbar-nav-item" Href="@ElectricityHref" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.ElectricBolt" ActiveClass="active-navbar-item">
+        <MudTooltip  Text="@ElectricityTooltipText()" Placement="Placement.Right"  RootClass="w-Inherit">
+            <MudNavLink UserAttributes="@(new() {{"role", "link"}})" Disabled="ElectricityDisabled" Class="navbar-nav-item" Href="@ElectricityHref" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.ElectricBolt" ActiveClass="active-navbar-item">
                 <NavMenuNavLinkContent SuffixIcon="@(HeatingMeterIsElectricity ? Icons.Material.Filled.Thermostat : "")">Electricity</NavMenuNavLinkContent>
             </MudNavLink>
         </MudTooltip>
         <MudTooltip Text="@GasTooltipText()" Placement="Placement.Right" RootClass="w-Inherit">
-            <MudNavLink 
-                    Disabled="GasDisabled" 
+            <MudNavLink UserAttributes="@(new() {{"role", "link"}})"
+                        Disabled="GasDisabled" 
                     Class="navbar-nav-item" 
                     Href="@GasHref" 
                     Match="NavLinkMatch.Prefix"
