--- a/Energy.App.Standalone/Features/Setup/Meter/Pages/AddElectricityMeterFormComponent.razor
+++ b/Energy.App.Standalone/Features/Setup/Meter/Pages/AddElectricityMeterFormComponent.razor
@@ -28,17 +28,12 @@
             <MudCardActions Class="d-block">
                 <MudButton ButtonType="ButtonType.Submit" Variant="Variant.Filled" Color="Color.Primary">@(_addingNotUpdating ? "Add" : "Update")</MudButton>
 
-                    <MudGrid Spacing="2" Class="mt-2" hidden=" @(!_submitSuccessful)">
-                        <MudItem>
-
-                            <MudText Color="Color.Success">
-                                <MudIcon Icon="@Icons.Material.Filled.Check" Color="Color.Success" />
-
-                                Electricity Meter Valid - proceed to authorize access to n3rgy.com?
-                            </MudText>
-                        </MudItem>
-
-                    </MudGrid>
+                    <div class="@(_submitSuccessful ? "visible" : "invisible") d-flex my-5 mud-typography-h6 mud-success-text justify-start align-baseline ">
+                        <span class="mx-auto">
+                            <i class="fa-solid fa-check" aria-hidden="true"></i>
+                            Electricity Meter Valid - proceed to authorize access to n3rgy.com?
+                        </span>
+                    </div>
 
                 </MudCardActions>
             </MudCard>
