--- a/Energy.App.Standalone/Pages/Credits.razor
+++ b/Energy.App.Standalone/Pages/Credits.razor
@@ -3,7 +3,7 @@
 <ExtendedPageTitle>Credits &amp; Licensing</ExtendedPageTitle>
 <div class="parent">
     <div class="banner"></div>
-    <iframe src="/Credits.html" ></iframe>
+    <iframe title="Credits, Attributions and Licensing" id="creditsIFrame" name="creditsIFrame" src="/Credits.html"></iframe>
 </div>
 
 
