--- a/Energy.App.Standalone/Pages/SetupWizard/Steps/WelcomeStep.razor
+++ b/Energy.App.Standalone/Pages/SetupWizard/Steps/WelcomeStep.razor
@@ -13,13 +13,14 @@
 
             <div
                 class="mx-auto">
-                <MudButton Size="Size.Medium"
+                <MudButton 
+                            Size="Size.Medium"
                            Variant="Variant.Outlined"
                            Color="Color.Info"
                            OnClick="OnExploreClick">
                     <span><i aria-hidden="true" class="fa-regular fa-thumbs-up"></i> Okay! Let me explore</span>
                 </MudButton>
-                <MudButton
+                <MudButton 
                     Size="Size.Medium"
                     Variant="Variant.Outlined"
                     Color="Color.Success"
