--- a/Energy.App.Standalone/src/scss/app/app.scss
+++ b/Energy.App.Standalone/src/scss/app/app.scss
@@ -259,3 +259,11 @@ h1:focus {
         min-width: fit-content;
     }
 }
+
+.nav-bottom-scroll-margin {
+    scroll-margin-bottom: 3rem;    
+}
+
+.nav-top-scroll-margin {
+    scroll-margin-top: 4rem;
+}
