--- a/Energy.App.Standalone/src/scss/app/app.scss
+++ b/Energy.App.Standalone/src/scss/app/app.scss
@@ -172,6 +172,10 @@ h1:focus {
     background-color: inherit !important;
 }
 
+.color-inherit {
+    color: inherit !important;
+}
+
 .fw-bold {
     font-weight: 700 !important;
 }
