test locator fixes

--- a/Energy.App.Standalone/Features/Setup/Household/Household.razor
+++ b/Energy.App.Standalone/Features/Setup/Household/Household.razor
@@ -41,7 +41,7 @@
                                      For="@(() => _householdDetails.OutCode)"
                                      T="OutCode" CoerceText="true"
                                      Clearable="true"
-                                     aria-label="Postal Area Autocomplete"
+                                     Placeholder="Postal Area"
                                      Required
                                       Disabled="@AppConfig.IsDemoMode"
                                      ShowProgressIndicator="true" ToStringFunc="@(outCode => outCode.OutCodeCharacters)"
