--- a/Energy.App.Standalone/Pages/SetupWizard/Steps/StepTemplate.razor
+++ b/Energy.App.Standalone/Pages/SetupWizard/Steps/StepTemplate.razor
@@ -1,5 +1,5 @@
 ﻿
-<MudPaper Elevation="2" Class="p-4">
+<MudPaper aria-label="Wizard step content" Elevation="2" Class="p-4">
     <MudGrid Justify="Justify.Center">
         <MudItem  xs="12">
             <div class="d-flex justify-space-between">
@@ -20,7 +20,7 @@
             @SetupStepPage
 
         </MudItem>
-        <MudItem xs="12">
+        <MudItem xs="12" aria-label="Wizard action buttons">
             @ActionButtons
         </MudItem>
     </MudGrid>
